dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderGenericProduct__c.object
<CustomObject>
    <fields>
        <fullName>Actiontype__c</fullName>
        <description>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</description>
        <inlineHelpText>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</inlineHelpText>
        <label>Actiontype</label>
        <picklist>
            <picklistValues>
                <fullName>create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autoprovisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when the automatic provisioning has been successfully completed for this GP</description>
        <inlineHelpText>Indicates when the automatic provisioning has been successfully completed for this GP</inlineHelpText>
        <label>Autoprovisioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>ID of Generic Product in Billing System (in case of SK filled only on GPs marked as PhoneLine)</description>
        <inlineHelpText>ID of Generic Product in Billing System (in case of SK filled only on GPs marked as PhoneLine)</inlineHelpText>
        <label>Billing ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BundleComponent__c</fullName>
        <description>Lookup to relation between Bundle and Component</description>
        <inlineHelpText>Lookup to relation between Bundle and Component</inlineHelpText>
        <label>Bundle Component</label>
        <referenceTo>Bundle_Component__c</referenceTo>
        <relationshipLabel>Order Generic Products</relationshipLabel>
        <relationshipName>Order_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of Generic Product in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Generic Product in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentGenericProduct__c</fullName>
        <description>Lookup to relation between Component and Generic Product (used to build configuration tree)</description>
        <inlineHelpText>Lookup to relation between Component and Generic Product (used to build configuration tree)</inlineHelpText>
        <label>Component Generic Product</label>
        <referenceTo>Component_Generic_Product__c</referenceTo>
        <relationshipLabel>Order Generic Products</relationshipLabel>
        <relationshipName>Order_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copied_for_migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Generic Product has been copied for migration</description>
        <inlineHelpText>Indicates if Generic Product has been copied for migration</inlineHelpText>
        <label>Copied for migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Generic Product has already been installed in Billing</description>
        <inlineHelpText>Indicates if Generic Product has already been installed in Billing</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenericProductInstanceId__c</fullName>
        <description>Installed GP instance ID from CSR</description>
        <label>Generic Product Instance Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenericProductRelation__c</fullName>
        <label>Generic Product Relation</label>
        <referenceTo>Generic_Product_Relation__c</referenceTo>
        <relationshipLabel>Order Generic Products</relationshipLabel>
        <relationshipName>Order_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GenericProduct__c</fullName>
        <description>Relation to GP definition in Product Catalog</description>
        <inlineHelpText>Relation to GP definition in Product Catalog</inlineHelpText>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Order Generic Products (Generic Product)</relationshipLabel>
        <relationshipName>Order_Generic_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderComponent__c</fullName>
        <description>relation to Order Component, that this GP belongs to</description>
        <inlineHelpText>relation to Order Component, that this GP belongs to</inlineHelpText>
        <label>Order Component</label>
        <referenceTo>OrderComponent__c</referenceTo>
        <relationshipLabel>Order Generic Products</relationshipLabel>
        <relationshipName>Order_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderLine__c</fullName>
        <description>relation to Order Line, that this GP was configured under</description>
        <inlineHelpText>relation to Order Line, that this GP was configured under</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Order Generic Products</relationshipLabel>
        <relationshipName>Order_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentGenericProduct__c</fullName>
        <description>Parent Generic Product (will be indicated in case this is 2nd level GP)</description>
        <inlineHelpText>Parent Generic Product (will be indicated in case this is 2nd level GP)</inlineHelpText>
        <label>Parent Generic Product</label>
        <referenceTo>OrderGenericProduct__c</referenceTo>
        <relationshipLabel>Order Generic Products</relationshipLabel>
        <relationshipName>Order_Generic_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <description>ID assigned by Product Configurator used later to update Generic Product with any changes</description>
        <externalId>true</externalId>
        <inlineHelpText>ID assigned by Product Configurator used later to update Generic Product with any changes</inlineHelpText>
        <label>SFDC_ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Order Generic Product</label>
    <nameField>
        <label>Order Generic Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Generic Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>